--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "redux-boilerplate",
+  "name": "redux-reddit",
   "version": "0.0.1",
-  "description": "Redux Boilerplate",
+  "description": "Redux Redit",
   "scripts": {
     "start": "node server.js"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/roylee0704/redux-boilerplate.git"
+    "url": "https://github.com/roylee0704/redux-reddit.git"
   },
   "keywords": [
     "react",
@@ -23,7 +23,7 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/roylee0704/redux-boilerplate/issues"
+    "url": "https://github.com/roylee0704/redux-reddit/issues"
   },
   "homepage": "",
   "dependencies": {
