--- a/package.json
+++ b/package.json
@@ -28,17 +28,22 @@
   "homepage": "",
   "dependencies": {
     "isomorphic-fetch": "^2.1.1",
-    "react": "^0.14.0",
+    "react": "^0.14.2",
     "react-redux": "^3.1.0",
     "react-dom": "latest",
     "redux": "^3.0.0",
     "redux-logger": "^2.0.2",
-    "redux-thunk": "^1.0.0"
+    "redux-thunk": "^1.0.0",
+    "material-ui": "latest"
   },
   "devDependencies": {
     "babel-core": "^5.6.18",
+    "babel-eslint": "^4.1.5",
     "babel-loader": "^5.1.4",
     "babel-plugin-react-transform": "^1.1.0",
+    "eslint": "^1.9.0",
+    "eslint-config-airbnb": "^1.0.0",
+    "eslint-plugin-react": "^3.8.0",
     "expect": "^1.6.0",
     "express": "^4.13.3",
     "jsdom": "^6.5.1",
