--- a/package.json
+++ b/package.json
@@ -27,14 +27,25 @@
   },
   "homepage": "",
   "dependencies": {
-    "isomorphic-fetch": "^2.1.1",
     "react": "^0.14.2",
     "react-redux": "^3.1.0",
-    "react-dom": "latest",
+    "react-dom": "^0.14.2",
     "redux": "^3.0.0",
     "redux-logger": "^2.0.2",
     "redux-thunk": "^1.0.0",
-    "material-ui": "latest"
+
+    "react-tap-event-plugin": "^0.2.1",
+    "material-ui": "^0.13.2",
+
+    "isomorphic-fetch": "^2.1.1",
+
+    "autoprefixer": "^6.0.3",
+    "css-loader": "^0.23.0",
+    "extract-text-webpack-plugin": "^0.9.0",
+    "node-sass": "^3.4.1",
+    "postcss-loader": "^0.8.0",
+    "sass-loader": "^3.1.1",
+    "style-loader": "^0.13.0"
   },
   "devDependencies": {
     "babel-core": "^5.6.18",
@@ -51,7 +62,7 @@
     "mocha-jsdom": "^1.0.0",
     "node-libs-browser": "^0.5.2",
     "react-transform-hmr": "^1.0.0",
-    "webpack": "^1.9.11",
+    "webpack": "^1.12.6",
     "webpack-dev-middleware": "^1.2.0",
     "webpack-hot-middleware": "^2.2.0"
   }
